--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
-  mysql:
-    image: mysql:8.0.36
-    container_name: mysql
+  db:
+    image: mysql:8.0
+    container_name: news-db
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
@@ -9,86 +9,63 @@ services:
       - "3306:3306"
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      retries: 3
+      interval: 5s
+      retries: 5
 
   rabbitmq:
-    image: rabbitmq:3
-    container_name: rabbitmq
+    image: rabbitmq:3-management
+    container_name: news-rabbitmq
     ports:
       - "5672:5672"
+      - "15672:15672"
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 5s
+      retries: 5
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
-    container_name: elasticsearch
+    container_name: news-elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
       - "9200:9200"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9200"]
-
-  migrate:
-    build: ./backend
-    command: npm run db:migrate
-    env_file:
-      - .env
-    depends_on:
-      mysql:
-        condition: service_healthy
-
-  seed:
-    build: ./backend
-    command: npm run db:seed
-    env_file:
-      - .env
-    depends_on:
-      migrate:
-        condition: service_completed_successfully
-      elasticsearch:
-        condition: service_started
+      interval: 10s
+      retries: 5
 
   api:
-    build: ./backend
-    container_name: news-server
+    image: news-backend
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: news-api
     env_file:
       - .env
     ports:
       - "3000:3000"
     depends_on:
-      mysql:
+      db:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
-      seed:
-        condition: service_completed_successfully
-    command: npm run start:api
-
-  frontend:
-    build: ./frontend
-    container_name: news-frontend
-    ports:
-      - "5173:5173"
-    depends_on:
-      api:
-        condition: service_started
+    command: sh -c "npm run db:migrate && npm run db:seed && npm run start:api"
 
   worker:
-    build: ./backend
+    image: news-backend
     container_name: news-worker
     env_file:
       - .env
     depends_on:
-      mysql:
+      db:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
-      seed:
-        condition: service_completed_successfully
     command: npm run start:worker
