update api woker

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ DB_PASSWORD=root
 DB_NAME=news_db
 RABBITMQ_URL=amqp://rabbitmq
 RABBITMQ_QUEUE=news_queue
+RABBITMQ_MAX_RETRY=5
+RABBITMQ_RETRY_DELAY_MS=2000
 ELASTICSEARCH_URL=http://elasticsearch:9200
 ELASTICSEARCH_INDEX=news
 WORKER_PREFETCH=1
+WORKER_MAX_RETRY=3
+WORKER_RETRY_DELAY_MS=2000
